--- a/proyectos/3.md
+++ b/proyectos/3.md
@@ -9,7 +9,7 @@ Modifica sólo la línea que tenga tus iniciales.
 |  OSCAR MANUEL C. N.   | [LibroWave](https://github.com/Kikin90/proy-cc)                     | 3.1 |
 |  HOSSAM D.   | <!--enlace-->                                                           | <!--versión--> |
 |  FLOR DEBHORA E. P.   | <!--enlace-->                                                           | <!--versión--> |
-|  MANUEL G. A.  | <!--enlace-->                                                           | <!--versión--> |
+|  MANUEL G. A.  | [Proyecto CC](https://github.com/ManuelGarciaAlonso/PROYECTO_CC)                     | 0.4 |
 |  NESTOR ENRIQUE G. B.   | <!--enlace-->                                                           | <!--versión--> |
 |  RAFAEL G. V.  | <!--enlace-->                                                           | <!--versión--> |
 |  FABIAN H.   | <!--enlace-->                                                           | <!--versión--> |
